don't create new dimension each switch
this doesn't help with performance, but it's the rare example where
you want to keep a dimension and use the group key function
(not used very often)

also use the declared variable, don't create an accidental global :-o

fixes #1577

--- a/web/examples/switching-time-intervals.html
+++ b/web/examples/switching-time-intervals.html
@@ -65,7 +65,9 @@
                 d[val_col] = +d[val_col];
             });
 
-            var ndx = crossfilter(posts), dateDim, postsGroup;
+            var ndx = crossfilter(posts),
+                dateDim = ndx.dimension(function(d) { return d[date_col]; }),
+                postsGroup;
 
             var intervals = {
                 Days: d3.timeDay,
@@ -81,16 +83,14 @@
                 .attr('selected', function(d) { return d === defint ? '' : null; });
             function setup() {
                 var start_t = window.performance.now();
-                if(dateDim) {
-                    dateDim.dispose();
-                    group.dispose();
-                }
+                if(postsGroup)
+                    postsGroup.dispose();
                 var interval_name = d3.select('#interval').nodes()[0].value;
                 var interval = intervals[interval_name];
-                dateDim = ndx.dimension(function(d) {return interval(d[date_col]);});
                 chart.xUnits(interval.range);
-                group = dateDim
-                    .group().reduce(
+                postsGroup = dateDim
+                    .group(function(k) { return interval(k); })
+                    .reduce(
                         function(p, v) {
                             ++p.count;
                             p.total += v[val_col];
@@ -120,8 +120,8 @@
                         return kv.value.total;
                     });
                 }
-                chart.dimension(dateDim).group(group)
-                    .transitionDuration(!find_query('unsafe') && group.all().length > 2000 ? 0 : 1000)
+                chart.dimension(dateDim).group(postsGroup)
+                    .transitionDuration(!find_query('unsafe') && postsGroup.all().length > 2000 ? 0 : 1000)
                     .render();
                 console.log(['setup for', interval_name, 'took', window.performance.now() - start_t, 'ms'].join(' '));
             }
