--- a/web/examples/compare-unfiltered.html
+++ b/web/examples/compare-unfiltered.html
@@ -52,7 +52,7 @@
       <div id="chart-11" style="width:100%;">
         <h5 class="chart-title"></h5>
         <div class="reset" style="visibility: hidden;">range: <span class="filter"></span>
-          <a href="javascript:chart_11.filterAll();dc.redrawAll();">reset</a>
+          <a href="javascript:charts[0].filterAll();dc.redrawAll();">reset</a>
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
       <div id="chart-12" style="width:100%;">
         <h5 class="chart-title"></h5>
         <div class="reset" style="visibility: hidden;">selected: <span class="filter"></span>
-          <a href="javascript:chart_12.filterAll();dc.redrawAll();">reset</a>
+          <a href="javascript:charts[1].filterAll();dc.redrawAll();">reset</a>
         </div>
       </div>
     </div>
@@ -68,7 +68,7 @@
       <div id="chart-13" style="width:100%;">
         <h5 class="chart-title"></h5>
         <div class="reset" style="visibility: hidden;">selected: <span class="filter"></span>
-          <a href="javascript:chart_13.filterAll();dc.redrawAll();">reset</a>
+          <a href="javascript:charts[2].filterAll();dc.redrawAll();">reset</a>
         </div>
       </div>
     </div>
@@ -80,7 +80,7 @@
       <div id="chart-21" style="width:100%;">
         <h5 class="chart-title"></h5>
         <div class="reset" style="visibility: hidden;">selected: <span class="filter"></span>
-          <a href="javascript:chart_21.filterAll();dc.redrawAll();">reset</a>
+          <a href="javascript:charts[3].filterAll();dc.redrawAll();">reset</a>
         </div>
       </div>
     </div>
@@ -88,7 +88,7 @@
       <div id="chart-22" style="width:100%;">
         <h5 class="chart-title"></h5>
         <div class="reset" style="visibility: hidden;">range: <span class="filter"></span>
-          <a href="javascript:chart_22.filterAll();dc.redrawAll();">reset</a>
+          <a href="javascript:charts[4].filterAll();dc.redrawAll();">reset</a>
         </div>
       </div>
     </div>
@@ -96,7 +96,7 @@
       <div id="chart-23"style="width:100%;">
         <h5 class="chart-title"></h5>
         <div class="reset" style="visibility: hidden;">selected: <span class="filter"></span>
-          <a href="javascript:chart_23.filterAll();dc.redrawAll();">reset</a>
+          <a href="javascript:charts[5].filterAll();dc.redrawAll();">reset</a>
         </div>
       </div>
     </div>
@@ -151,6 +151,8 @@
       }
   ];
 
+  var charts;
+
   d3.csv('six-dim.csv').then(function(data) {
       data.forEach(function(d) {
           chart_specs.forEach(function(spec) {
@@ -164,7 +166,7 @@
       data_count.crossfilter(cf)
           .groupAll(all);
 
-      var charts = chart_specs.map(function(spec) {
+      charts = chart_specs.map(function(spec) {
           return dc.compositeChart(spec.selector);
       });
 
