allow plots to shrink

--- a/web/resizing/resizing-scatter-flexbox-observer.html
+++ b/web/resizing/resizing-scatter-flexbox-observer.html
@@ -14,7 +14,8 @@
           flex-direction: row;
       }
       #test1,#test2 {
-          flex: 1
+          min-width: 0;
+          flex: 1;
       }
     </style>
 </head>
