--- a/web/resizing/index.html
+++ b/web/resizing/index.html
@@ -16,7 +16,10 @@ here</a>.</p>
   <tr>
     <td><a href="resizing-row.html">resizing row</a></td>
     <td><a href="resizing-scatter-brushing.html">resizing scatter brushing</a></td>
+    <td><a href="resizing-scatter-flexbox-observer.html">resizing scatter flexbox observer</a></td>
     <td><a href="resizing-series.html">resizing series</a></td>
+  </tr>
+  <tr>
     <td><a href="resizing-sunburst.html">resizing sunburst</a></td>
   </tr>
 </table>
