--- a/web/examples/replacing-data.html
+++ b/web/examples/replacing-data.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-<link rel="stylesheet" type="text/css" href="//dc-js.github.io/dc.js/css/dc.css"/>
+<link rel="stylesheet" type="text/css" href="../css/dc.css"/>
 <div class="container">
 <script type="text/javascript" src="header.js"></script>
-<script type="text/javascript" src="//dc-js.github.io/dc.js/js/d3.js"></script>
-<script type="text/javascript" src="//dc-js.github.io/dc.js/js/crossfilter.js"></script>
-<script type="text/javascript" src="//dc-js.github.io/dc.js/js/dc.js"></script>
+<script type="text/javascript" src="../js/d3.js"></script>
+<script type="text/javascript" src="../js/crossfilter.js"></script>
+<script type="text/javascript" src="../js/dc.js"></script>
 
 <div id="chart-ring-year"></div>
 <div id="chart-row-spenders"></div>
